--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-/venv/
+/myenv/
 /.idea/FastAPI-The-Complete-Course.iml
 /.idea/misc.xml
 /.idea/modules.xml
@@ -8,3 +8,5 @@
 __pycache__/
 .idea
 env
+
+*.db
