--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,11 @@
 {
   "python.analysis.typeCheckingMode": "basic",
-  "spellright.language": [
-    "en"
-  ],
-  "spellright.documentTypes": [
-    "markdown",
-    "latex",
-    "plaintext",
-    "python"
+  "spellright.language": ["en"],
+  "spellright.documentTypes": ["markdown", "latex", "plaintext", "python"],
+  "cSpell.words": [
+    "db",
+    "sessionmaker",
+    "SQLALCHEMY",
+    "Todos"
   ]
 }
