Valid user added to database

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,10 +2,5 @@
   "python.analysis.typeCheckingMode": "basic",
   "spellright.language": ["en"],
   "spellright.documentTypes": ["markdown", "latex", "plaintext", "python"],
-  "cSpell.words": [
-    "db",
-    "sessionmaker",
-    "SQLALCHEMY",
-    "Todos"
-  ]
+  "cSpell.words": ["db", "sessionmaker", "SQLALCHEMY", "Todos", "todosapp"]
 }
